IC-342 - iframe too wide fix

--- a/src/main/webapp/assets/styles/base/components/article.less
+++ b/src/main/webapp/assets/styles/base/components/article.less
@@ -82,6 +82,7 @@
     iframe {
         margin-left: auto;
         margin-right: auto;
+        max-width: 100% !important; // makes sure an iframe doesn't pop itself out of the article
     }
 
     // on xsmall, there is only center alignment
